# Soil-Moisture-Sensor

./: CMakeLists.txt  Credentials.h  README.md  lwipopts.h  main.c  mbedtls_config.h  moisture_sensor.ino  setupWiFi.h  sntp.h  soil-sensor.c
